fixed alignment on navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,11 @@ h2 {
 
 .row-content {
     padding: 50px 0;
-    border-bottom: 1px ridge;
+  /*  border-bottom: 1px ridge;*/
     min-height: 200px;
 }
 
 .navbar {
     background-color: #904cad;
+    text-align: center;
 }
